# raytracer

./: .clang-format  CMakeLists.txt  image.cpp  image.hpp  main.cpp
cmake/: FindGLM.cmake
core/: CMakeLists.txt
core/include/: print.hpp  ray.hpp
core/src/: ray.cpp
ray/: CMakeLists.txt
ray/src/: main.cpp
utils/: CMakeLists.txt
utils/include/: image.hpp
utils/src/: image.cpp
